# MicroServices

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Requests.http  Test.http  task1.cpp
FacadeService/: CMakeLists.txt  main.cpp
FacadeService/Controller/: FacadeController.cpp  FacadeController.hpp
FacadeService/Service/: FacadeService.cpp  FacadeService.hpp
FacadeService/service/: FacadeService.cpp  FacadeService.hpp
LoggingService/: CMakeLists.txt  main.cpp
LoggingService/Controller/: LoggingController.cpp  LoggingController.hpp
LoggingService/Repository/: HZRepository.cpp  HZRepository.hpp  MemoryRepository.cpp  MemoryRepository.hpp
LoggingService/Service/: LoggingService.cpp  LoggingService.hpp
LoggingService/cmake/: FindLibHttpServer.cmake
LoggingService/service/: LoggingService.cpp  LoggingService.hpp
MessagesService/: CMakeLists.txt  main.cpp
MessagesService/Controller/: MessageController.cpp  MessageController.hpp
MessagesService/Repository/: MessageMemRepository.cpp  MessageMemRepository.hpp
MessagesService/Service/: MessagesService.cpp  MessagesService.hpp
MessagesService/service/: MessageService.hpp
Model/: Message.hpp  MessageString.hpp  MessageUUID.hpp
scripts/: deregister-service.sh  fill-data.sh  run-consul.sh  stop-consul.sh
task1/: CMakeLists.txt
task2_datarace_test/: CMakeLists.txt  task2_datarace.cpp
task3_bounded_queue/: CMakeLists.txt  hazelcast.xml  task3_queue.cpp  write_client.cpp
